<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/news_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news_section"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/news_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news_title"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="8dp"
            android:text="@string/type"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/news_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news_type" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="8dp"
            android:text="@string/date"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/news_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news_date" />
    </LinearLayout>

    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/author"
        android:textStyle="bold"/>


</LinearLayout>